# PosKernel

./: .copilot-instructions.md  .gitignore  CHAT_CONTEXT_SUMMARY.md  CONTRIBUTING.md  DEV_LOG.md  Directory.Build.props  LICENSE  NOTICE  PosKernel.AI.Training.Status.md  PosKernel.sln  README.md  architecture_notes.md  chat-context.md  copilot-instructions.md  global.json  nuget.config  run.ps1  rust-service-currency-fix.patch  session_request.json  temp_working_program.cs  test-client.cs  test-currency-void-fix.ps1  test-minimal.sh  test-xfer.cs
.github/: copilot-instructions.md
PosKernel.AI/: ApiTest.cs  McpToolTest.cs  MenuContextTest.cs  MinimalTest.cs  PosKernel.AI.csproj  Program.cs  README.md  appsettings.json
PosKernel.AI.Cli/: PosKernel.AI.Cli.csproj  Program.cs
PosKernel.AI.Common/: Class1.cs  ILargeLanguageModel.cs  PosKernel.AI.Common.csproj
PosKernel.AI.Demo/: PosKernel.AI.Demo.csproj  Program.cs
PosKernel.AI.ServiceHost/: Program.cs
PosKernel.AI.Training/: PosKernel.AI.Training.csproj  ServiceCollectionExtensions.cs
PosKernel.AI.Training.Demo/: PosKernel.AI.Training.Demo.csproj  Program.cs
PosKernel.AI.Training.TUI/: PosKernel.AI.Training.TUI.csproj  Program.cs
PosKernel.AI.Training.Test/: ConfigTest.cs
PosKernel.Abstractions/: PosKernel.Abstractions.csproj  Receipt.cs
PosKernel.Client/: IPosKernelClient.cs  KernelClientFactory.cs  PosClient.cs  PosKernel.Client.csproj  PosKernelClient.cs  Program.cs  RustKernelClient.cs
PosKernel.Configuration/: PosKernel.Configuration.csproj  PosKernelConfiguration.cs
PosKernel.Core/: PosKernel.Core.csproj  TransactionService.cs
PosKernel.Extensions.Restaurant/: HttpRestaurantExtensionClient.cs  IRestaurantExtension.cs  InProcessRestaurantExtension.cs  PosKernel.Extensions.Restaurant.csproj  Program.cs  RestaurantExtension.cs  RestaurantExtensionClient.cs  RestaurantExtensionFactory.cs  RestaurantExtensionService.cs  appsettings.json  appsettings.kopitiam.json
PosKernel.Host/: Pos.cs  PosKernel.Host.csproj  Program.cs  RustNative.cs
PosKernel.HttpService/: PosKernel.HttpService.csproj  PosKernel.HttpService.http  Program.cs
PosKernel.Providers.Demo/: CoffeeShopCatalogProvider.cs  PosKernel.Providers.Demo.csproj
PosKernel.Service/: PosKernel.Service.csproj  Program.cs  appsettings.json
ai_config/: README.md
config-templates/: .env  ai.xfer  config.xfer  product-catalog.xfer
docs/: ARCHITECTURE_INDEX.md  BUILD_RULES.md  CLEANUP.md  (+35 more)
pos-kernel-rs/: Cargo.toml  build.rs  poskernel.toml  test_void.sh
pos-kernel-rs/pos_kernel_data/: transaction.wal
pos-kernel-rs/proto/: pos_kernel.proto
pos-kernel-rs/src/: enhanced_line.rs  lib.rs  lib_minimal.rs  store_void_methods.rs  transaction_void_methods.rs
(+189 files in other folders)
