# Cargo.toml
# Copyright 2025 Paul Moore Parks and contributors
# Licensed under the Apache License, Version 2.0

[package]
name = "pos-kernel-rs"
version = "0.4.0"
authors = ["Paul Moore Parks <paul@paulmooreparks.com>"]
edition = "2021"
description = "High-performance, legally-compliant POS transaction kernel"
license = "Apache-2.0"
repository = "https://github.com/paulmooreparks/PosKernel"
homepage = "https://github.com/paulmooreparks/PosKernel"
documentation = "https://github.com/paulmooreparks/PosKernel/tree/master/docs"
readme = "../README.md"
keywords = ["pos", "retail", "transaction", "kernel", "ffi"]
categories = ["api-bindings", "finance", "embedded"]

[lib]
name = "pos_kernel"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
panic = "unwind"
